# edv_system

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
app/: main.cpp
core/: AppSettings.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  DbConnectionDialog.cpp  DbConnectionDialog.h  LoginDialog.cpp  LoginDialog.h
core/config/: AppConfig.hpp
core/database/: ConnectionPool.cpp  ConnectionPool.hpp  DatabaseManager.cpp  DatabaseManager.hpp
core/journal/: JournalEntry.hpp  PostManager.cpp  PostManager.hpp
core/security/: AuthManager.cpp  AuthManager.hpp  Session.hpp
core/ui/: ThemeManager.cpp  ThemeManager.hpp
models/: CustomerModel.cpp  CustomerModel.h
modules/fico/: CMakeLists.txt
modules/fico/ui/: FicoWidget.cpp  FicoWidget.hpp  FicoWidget.ui
modules/hr/: CMakeLists.txt
modules/hr/ui/: HrWidget.cpp  HrWidget.hpp  HrWidget.ui
modules/mm/: CMakeLists.txt  PredictiveReorder.cpp  PredictiveReorder.hpp  WmsScanner.cpp  WmsScanner.hpp
modules/mm/ui/: MmWidget.cpp  MmWidget.hpp  MmWidget.ui
modules/pp/: CMakeLists.txt
modules/pp/ui/: PpWidget.cpp  PpWidget.hpp  PpWidget.ui
modules/sd/: CMakeLists.txt  PricingEngine.cpp  PricingEngine.hpp
modules/sd/ui/: SdWidget.cpp  SdWidget.hpp  SdWidget.ui
resources/styles/: dark.qss  dark_theme.qss  light.qss  light_theme.qss
sql/: 001_schema.sql  002_seed.sql  schema.sql
translations/: edv_ar.ts  edv_de.ts  edv_en.ts  edv_system_ar.ts  edv_system_de.ts  edv_system_en.ts
ui/: CrmWidget.cpp  CrmWidget.h  DashboardWidget.cpp  DashboardWidget.h  DashboardWidget.hpp  DashboardWidget.ui  DbSetupDialog.cpp  DbSetupDialog.hpp  DbSetupDialog.ui  FinanceWidget.cpp  FinanceWidget.h  HrWidget.cpp  HrWidget.h  InventoryWidget.cpp  InventoryWidget.h  LoginDialog.cpp  LoginDialog.hpp  LoginDialog.ui  LoginPage.cpp  LoginPage.hpp  LoginPage.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  SettingsWidget.cpp  SettingsWidget.h
